Add option to limit landscapes to 2

--- a/website/css/main.css
+++ b/website/css/main.css
@@ -69,12 +69,12 @@ html, body {
     align-items: center;
 }
 
-#sets {
+form > fieldset {
     margin-bottom: 16px;
     width: 100%;
 }
 
-#sets > span {
+form > fieldset > span {
     display: block;
     padding: 0.4em;
 }
